--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -8,6 +8,37 @@ body {
     /*font-family: "Nunito";*/
     margin: 0;
     font-family: 'Nunito', sans-serif;
-    background-color: #091222;
+    /* TODO:change  */
+    /* background-color: #091222; */
+    background-color: #4298B4;
+    
+}
 
+.btn{
+    @apply px-4 py-2 border rounded-3xl text-base
+   text-sec-1;
+  background-color: #f1b139;
+  border: 0;
+  min-width: 150px;
+  font-weight: normal;
+  transition: all 0.3s ease;
+}
+.btn:hover{
+    @apply bg-sec-2-darker ;
+    color: beige;
+    transition: all 0.3s ease-out;
+}
+.btn-alert{
+    @apply px-4 py-2 border rounded-3xl text-base
+   text-sec-1;
+  background-color: red;
+  border: 0;
+  min-width: 150px;
+  font-weight: normal;
+  transition: all 0.3s ease;
+}
+.btn-alert:hover{
+    color: beige;
+    background-color: rgb(148, 0, 0);
+    transition: all 0.3s ease-out;
 }
