--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -8,6 +8,7 @@ body {
     /*font-family: "Nunito";*/
     margin: 0;
     font-family: 'Nunito', sans-serif;
-    background-color: #091222;
-
+    /*TODO:change background color*/
+    /*background-color: #091222;*/
+    background-color: white;
 }
